--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -15,6 +15,7 @@
             <img th:src="@{/login/img/loginError.jpg}" width="20px">用户名或密码错误，请重新登录！
         </div>
         <input type="text" name="name" class="form-control" placeholder="用户名" required="" autofocus="">
+<!--        自定义password name-->
         <input type="password" name="pwd" class="form-control" placeholder="密码" required="">
         <div class="checkbox mb-3">
             <label>
