--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>影视直播厅</title>
@@ -16,6 +17,7 @@
 	</form>
 </div>
 <hr>
+
 <div sec:authorize="hasRole('common')">
 	<h3>普通电影</h3>
 	<ul>
@@ -23,6 +25,7 @@
 		<li><a th:href="@{/detail/common/2}">夏洛特烦恼</a></li>
 	</ul>
 </div>
+
 <div sec:authorize="hasAuthority('ROLE_vip')">
 	<h3>VIP专享</h3>
 	<ul>
@@ -32,4 +35,3 @@
 </div>
 </body>
 </html>
-
